2003-02-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/nodepath.c (create_curve): Do not add 50 to y (why was it here?)

	* src/sp-item-group.c (sp_group_update): Propagate only if update flag set

	* src/sp-item.c (sp_item_set): Set clippath bbox
	(sp_item_update): Ditto

	* src/sp-clippath.c (sp_clippath_build): Implement
	(sp_clippath_set): Ditto, clipPathUnits attribute
	(sp_clippath_update): Ditto
	(sp_clippath_show): Use bbox if needed
	(sp_clippath_set_bbox): New method

2003-02-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_release): Release mask
	(sp_item_mask_release): New handler
	(sp_item_mask_modified): Ditto
	(sp_item_set): Parse mask
	(sp_item_show): Show mask
	(sp_item_private_hide): Hide mask

	* src/display/nr-arena-item.c (nr_arena_item_invoke_render): Do masking
	(nr_arena_item_private_dispose): Release mask
	(nr_arena_item_invoke_update): Update mask
	(nr_arena_item_set_mask): New method

	* src/sp-root.c (sp_root_build): Do not check for xmlns:sodipodi to determine
	version, as this is set automatically in xml loader

	* src/slideshow.h: New file

	* src/slideshow.c: New file

2003-02-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-rect.c (sp_rect_set): Accept 0.0 as valid for x, y, width and height
	(sp_rect_write): Use 0.0 as default for rx, ry

	* src/rect-context.c (sp_rect_finish): Use ::write to be sure

	* src/display/nr-arena-shape.c (nr_arena_shape_clip): OR masks

	* src/sp-defs.c (sp_defs_update): Implement
	(sp_defs_modified): Ditto

	* src/sp-clippath.c (sp_clippath_update): Implement
	(sp_clippath_modified): Ditto
	(sp_clippath_show): Fix
	(sp_clippath_hide): Implement

	* src/sp-item.c (sp_item_set): Fix clippath
	(sp_item_show): Ditto
	(sp_item_private_hide): Ditto
	(sp_item_display_key_new): New method

	* src/sp-item.h: Use new signature for ::show and ::hide

2003-02-01  Daniel Yacob  <locales@geez.org>

	* configure.in: Added "am" (Amharic) to ALL_LINGUAS.
